# app/Http/Controllers/Api/Clinics/ClinicsController.php
@@ -1,0 +1,279 @@
+<?php
+
+namespace App\Http\Controllers\Api\Clinics;
+
+use App\Models\Clinics;
+use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Response;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Support\Str;
+
+class ClinicsController extends Controller
+{
+    /**
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     * @OA\Get (
+     *     path="/api/mz-clinics",
+     *     tags={"Clinics"},
+     *     @OA\Response(
+     *          response=200,
+     *          description="",
+     *      ),
+     * )
+     */
+    public function index()
+    {
+        return response(Clinics::all(), 200);
+    }
+
+
+    /**
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     * @OA\Get (
+     *     tags={"Clinics"},
+     *     path="/api/mz-clinics/get-by-id/{id}",
+     *     @OA\Parameter( name="id", in="path", required=false, description="1", @OA\Schema( type="integer" ) ),
+     *
+     *     @OA\Response(
+     *          response=200,
+     *          description="",
+     *      @OA\JsonContent(
+     *     type="object",
+     *                      )
+     *                  ),
+     *      )
+     */
+    public function getById($id)
+    {
+        return Clinics::select()
+            ->where(['id' => $id])
+            ->get();
+    }
+
+
+
+
+
+    /**
+     * Show the form for creating a new resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function create()
+    {
+        //
+    }
+
+
+    /**
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     * @OA\Post(
+     *     path="/api/mz-clinics",
+     *     tags={"Clinics"},
+     *     @OA\RequestBody(
+     *    request="Create Clinics",
+     *    description="Create Clinics Fields",
+     *    @OA\JsonContent(
+     *        type="object",
+     *        required={""},
+     *          @OA\Property(property="name",description="Текст", type="string", example="Тест"),
+     *          @OA\Property(property="short_name",description="Текст", type="string", example="Тест"),
+     *          @OA\Property(property="hide",description="Скрыть", type="number", example="0")
+     *    )
+     * ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Success Create",
+     *          @OA\JsonContent(
+     *             type="object",
+     *          @OA\Property(property="id", type="number", example="1"),
+     *          @OA\Property(property="name",description="Текст", type="string", example="Тест"),
+     *          @OA\Property(property="short_name",description="Текст", type="string", example="Тест"),
+     *          @OA\Property(property="hide",description="Скрыть", type="number", example="0")
+     *         )
+     *      ),
+     *     @OA\Response(
+     *          response=422,
+     *          description="Validation errors",
+     *      @OA\JsonContent(
+     *     type="object",
+     *     title="errors",
+     *     description="errors object",
+     *     @OA\Property(
+     *     property="errors",
+     *     type="object",
+     *     title="Validation errors",
+     *     description="Validation errors object",
+     *     @OA\Property(property="field1", type="array", @OA\Items(example="The field1 field is required.")),
+     * )
+     * )
+     *      ),
+     * )
+     */
+    public function store(Request $request)
+    {
+
+        if ($request->id > 0) {
+            $user = Clinics::whereId($request->id)->first();
+        } else {
+            $user = new Clinics();
+        }
+
+        $validator = $user->validate($request->all());
+        if ($validator->fails()) {
+            return response(['errors' => $validator->errors()], 422);
+        }
+
+        $user->fill($request->only($user->getFillable()))->save();
+        return response(
+            Clinics::whereId($user->id)->first()->toArray(), 200);
+
+
+    }
+
+
+
+    /**
+     * Display the specified resource.
+     *
+     * @param int $id
+     * @return \Illuminate\Http\Response
+     */
+    public function show($id)
+    {
+        //
+    }
+
+    /**
+     * Show the form for editing the specified resource.
+     *
+     * @param int $id
+     * @return \Illuminate\Http\Response
+     */
+    public function edit($id)
+    {
+        //
+    }
+
+    /**
+     * @param Request $request
+     * @param $id
+     * @return \Illuminate\Http\JsonResponse
+     * @OA\Patch (
+     *     path="/api/mz-clinics/{id}",
+     *     tags={"Clinics"},
+     *     @OA\Parameter(
+     *      name="id",
+     *      in="path",
+     *      @OA\Schema(
+     *           type="number"
+     *      )
+     *   ),
+     *     @OA\RequestBody(
+     *    request="Update Clinics",
+     *    description="Update Clinics Fields",
+     *    @OA\JsonContent(
+     *        type="object",
+     *        required={""},
+     *          @OA\Property(property="name",description="Текст", type="string", example="Тест"),
+     *          @OA\Property(property="short_name",description="Текст", type="string", example="Тест"),
+     *          @OA\Property(property="hide",description="Скрыть", type="number", example="0")
+     *    )
+     * ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Success Create",
+     *          @OA\JsonContent(
+     *             type="object",
+     *          @OA\Property(property="id", type="number", example="1"),
+     *          @OA\Property(property="name",description="Текст", type="string", example="Тест"),
+     *          @OA\Property(property="short_name",description="Текст", type="string", example="Тест"),
+     *          @OA\Property(property="hide",description="Скрыть", type="number", example="0")
+     *         )
+     *      ),
+     *     @OA\Response(
+     *          response=422,
+     *          description="Validation errors",
+     *      @OA\JsonContent(
+     *     type="object",
+     *     title="errors",
+     *     description="errors object",
+     *     @OA\Property(
+     *     property="errors",
+     *     type="object",
+     *     title="Validation errors",
+     *     description="Validation errors object",
+     *     @OA\Property(property="field1", type="array", @OA\Items(example="The field1 field is required.")),
+     *     @OA\Property(property="field2", type="array",  @OA\Items(example="The field2 field is required."))
+     * )
+     * )
+     *      ),
+     * )
+     */
+    public function update(Request $request)
+    {
+        $entity = Clinics::whereId($request->id)->first();
+        if (!$entity) {
+            return response([], 404);
+        }
+
+        $validator = $entity->validate($request->all(), false);
+
+        if ($validator->fails()) {
+            return response(['errors' => $validator->errors()], 422);
+        }
+
+        $entity->fill($request->only($entity->getFillable()));
+
+        if ($entity->save()) {
+
+            return response($entity->toArray(), 200);
+        } else {
+            return response('anyError', 500);
+        }
+    }
+
+    /**
+     * @param Request $request
+     * @param $id
+     * @return \Illuminate\Http\JsonResponse
+     * @OA\Delete  (
+     *     path="/api/mz-clinics/{id}",
+     *     tags={"Clinics"},
+     *     @OA\Parameter(
+     *      name="id",
+     *      in="path",
+     *      @OA\Schema(
+     *           type="number"
+     *      )
+     *   ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Success Delete",
+     *          @OA\JsonContent(
+     *             type="object",
+     *              @OA\Property(property="is_deleted", type="boolean", example=true),
+     *         )
+     *      ),
+     *     @OA\Response(
+     *          response=400,
+     *          description="Error Delete",
+     *          @OA\JsonContent(
+     *             type="object",
+     *              @OA\Property(property="is_deleted", type="boolean", example=false),
+     *         )
+     *      ),
+     *
+     * )
+     */
+    public function destroy($id)
+    {
+        $is_deleted = (bool)Clinics::whereId($id)->delete();
+        return response(['is_deleted' => $is_deleted], $is_deleted ? 200 : 400);
+    }
+}
